2.3.5
-----
1. Less generic pagehandler regexes.
2. Translation updates.
3. Fix certain shortcuts with macOS.
4. Expand now-laying in desktop layout with single click on cover image in
   bottom toolbar. Not for iOS though, as this shows menu on single click.
5. For mobile devices, hide bottom bar when keyboard is shown.

2.3.4
-----
 1. Always check if an items duration is valid before using to calculate
    selection duration.
 2. Ignore clicks on artist, album, etc. subtitles in queue when selection
    active.
 3. Remove icon mapping for RadioFrance and TVHeadend icon, as plugins now
    provide their own.
 4. Fix check for all items having same icon/image.
 5. Fix colour of player status icons for light themes with coloured toolbars.
 6. Fix colour of SVG icons in toolbars of fullscreen dialogs when using light
    themes with coloured toolbars.
 7. Fix opening menu of pinned item in browse when another browse menu is open.
 8. If rating is 1 or 0.5 and click to set same value then reset rating to 0.
 9. Add 'Remove' to ratings dialog, setting rating to 0.
10. Fix showing link menu in now-playing whilst existing already open.
11. Add semi-transparent background when showing rating in portrait now-playing.

2.3.3
-----
1. Fix blank queue, etc.
2. Remove longpress to open advanced search, breaks back button?

2.3.2
-----
 1. 'Now playing' should update on year change.
 2. Allow certain shortcuts (e.g. inc/dec volume) to repeat every 300ms when
    pressed.
 3. Show buttons for application, player, and server settings in 'Settings'
    dialog toolbar if there is space.
 4. Better player settings, server settings, application settings, and advanced
    search icons.
 5. Remove (?) button from 'Information' dialog toolbar. Links to user guide,
    but this is too out of date for such a prominant link.
 6. Add mouse-wheel support to volume sliders in 'Manage players' dialog and
    volume popup for synced players.