@@ -6,6 +6,8 @@
 4. Expand now-laying in desktop layout with single click on cover image in
    bottom toolbar. Not for iOS though, as this shows menu on single click.
 5. For mobile devices, hide bottom bar when keyboard is shown.
+6. When changing volume in group player's dialog freshes all players.
+7. Reset close timer on group player dialog when adjust a volume.
 
 2.3.4
 -----
